# solsim

./: .flake8  .gitignore  .gitmodules  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  pytest.ini  setup.cfg  sitemap.xml
.github/workflows/: docs.yml  lint.yml  release.yml  tests.yml
api/: index.html
docs/: api.md
examples/drunken_escrow/: run.py  system.py
examples/lotka_volterra/: __main__.py  run.py  system.py
examples/simple_escrow/: run.py  system.py
scripts/: lint.sh
search/: search_index.json
src/solsim/: base.py  cli.py  constant.py  constants.py  simulation.py  system.py  type.py  visualize.py
tests/: test_examples.py  test_simulation.py  test_system.py
