[tool.poetry]
name = "solsim"
version = "0.1.2"
description = "The Solana complex systems simulator."
authors = ["Will Wolf <williamabrwolf@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
anchorpy = "^0.6.4"
pandas = "^1.4.0"
numpy = "^1.22.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
