[tool.poetry]
name = "solsim"
version = "0.1.7"
description = "The Solana complex systems simulator."
authors = ["Will Wolf <williamabrwolf@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cavaunpeu/solsim"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
anchorpy = "^0.6.4"
pandas = "^1.4.0"
numpy = "^1.22.1"
tqdm = "^4.62.3"
streamlit = "^1.5.0"
feather-format = "^0.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
mypy = "^0.931"
pytest-asyncio = "^0.17.2"
pytest-mock = "^3.6.1"
flake8 = "^4.0.1"
mkdocs = "^1.2.3"
mkdocs-material = "^8.1.8"
mkdocstrings = "^0.17.0"
typer = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
