[metadata]
name = solsim
version = 0.0.1
author = Will Wolf
author_email = williamabrwolf@gmail.com
description = A Python framework for simulating complex systems built on the Solana blockchain
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src